--- a/src/Cards.css
+++ b/src/Cards.css
@@ -100,17 +100,13 @@
         width: 100%;
         height: 100%;
         border-radius: 0;
-        padding: 0;
-        margin: 0 auto;
-        padding: 10px;
-
     }
 
     .active-card {
         height: 170px;
         width: 250px;
         margin-left: 0;
-        padding: 10px;
+        /* padding: 10px; */
         border-radius: 20px;
     }
 
