--- a/src/Profile.css
+++ b/src/Profile.css
@@ -59,7 +59,6 @@
 @media screen and (max-width: 880px) {
     #profile-main {
         width: 100%;
-        padding: 0 20px;
     }
 
     #balance-container {
